--- a/rust/cmsis-cli/Cargo.toml
+++ b/rust/cmsis-cli/Cargo.toml
@@ -21,7 +21,7 @@ path = "src/main.rs"
 directories = "4"
 clap = "2.33.1"
 log = "0.4.8"
-simplelog = "0.10.0"
+simplelog = { version = "0.12.0", default-features = false, features = [ "termcolor" ] }
 pbr = "^1.0.0"
 cmsis-pack = { version = "0.6.0", path = "../cmsis-pack" }
 anyhow = "1.0.56"
